<resources>
    <string name="app_name">GithubUserApps</string>

    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="search">Search</string>

    <string name="avatar_user">Avatar User</string>
    <string name="hint_search">Search User…</string>
    <string name="image_no_signal">Image No Signal</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="repository">Repository</string>
    <string name="no_user_found">User Not Found…</string>
    <string name="no_followers">No Followers</string>
    <string name="no_following">No Following</string>
    <string name="search_user_github">Search User Github</string>
    <string name="no_data">null</string>
    <string name="empty_favorite_list">No Data</string>
    <string name="change_theme">Change Theme</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="delete_all_user">Delete All User</string>
</resources>