<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.githubuserapps.ui.home.HomeFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/PlanetMovie.SearchView"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/hint_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svHome" />

    <ProgressBar
        android:id="@+id/pbHome"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivNoSignal"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/image_no_signal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tvNoSignal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/no_internet" />

    <TextView
        android:id="@+id/tvNoSignal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_internet_connection"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ivNoSignal"
        app:layout_constraintStart_toStartOf="@+id/ivNoSignal"
        app:layout_constraintTop_toBottomOf="@+id/ivNoSignal" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivNoUserFound"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/image_no_signal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tvNoUserFound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/no_data" />

    <TextView
        android:id="@+id/tvNoUserFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_user_found"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ivNoUserFound"
        app:layout_constraintStart_toStartOf="@+id/ivNoUserFound"
        app:layout_constraintTop_toBottomOf="@+id/ivNoUserFound" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivSearchUser"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSearchUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/search" />

    <TextView
        android:id="@+id/tvSearchUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_user_github"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ivSearchUser"
        app:layout_constraintStart_toStartOf="@+id/ivSearchUser"
        app:layout_constraintTop_toBottomOf="@+id/ivSearchUser" />

</androidx.constraintlayout.widget.ConstraintLayout>