<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userDetailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.githubuserapps.ui.detail.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/alDetailUsr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/apps_background">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctlDetailUsr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/apps_background"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ProgressBar
                android:id="@+id/pbDetail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clOneDetailUsr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/ivDetailUsr"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/avatar_user"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.25"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tvUsrnmDetailUsr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/ivDetailUsr"
                    app:layout_constraintStart_toStartOf="@+id/ivDetailUsr"
                    app:layout_constraintTop_toBottomOf="@+id/ivDetailUsr"
                    tools:text="Lorem Ipsum" />

                <TextView
                    android:id="@+id/tvNameDetailUsr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:alpha="0.7"
                    android:textColor="@color/text_color"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/tvUsrnmDetailUsr"
                    app:layout_constraintStart_toStartOf="@+id/tvUsrnmDetailUsr"
                    app:layout_constraintTop_toBottomOf="@+id/tvUsrnmDetailUsr"
                    tools:text="Lorem Ipsum" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNameDetailUsr">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvCompanyDtl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:alpha="0.7"
                            android:gravity="start"
                            android:textColor="@color/text_color"
                            android:textSize="15sp"
                            app:drawableStartCompat="@drawable/ic_work"
                            tools:text="Lorem Ipsum" />

                        <TextView
                            android:id="@+id/tvLocationDtl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:alpha="0.7"
                            android:gravity="start"
                            android:textColor="@color/text_color"
                            android:textSize="15sp"
                            app:drawableStartCompat="@drawable/ic_location"
                            tools:text="Lorem Ipsum" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvFollowing"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/following"
                            android:textColor="@color/text_color"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tvFollower"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/follower"
                            android:textColor="@color/text_color"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tvRepository"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/repository"
                            android:textColor="@color/text_color"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvFollowingDtl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:alpha="0.7"
                            android:gravity="center"
                            android:textColor="@color/text_color"
                            android:textSize="15sp"
                            tools:text="Lorem Ipsum" />

                        <TextView
                            android:id="@+id/tvFollowerDtl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:alpha="0.7"
                            android:gravity="center"
                            android:textColor="@color/text_color"
                            android:textSize="15sp"
                            tools:text="Lorem Ipsum" />

                        <TextView
                            android:id="@+id/tvRepositoryDtl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:alpha="0.7"
                            android:gravity="center"
                            android:textColor="@color/text_color"
                            android:textSize="15sp"
                            tools:text="Lorem Ipsum" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlDetailUsr"
            style="@style/CustomTLStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTwoDetailUsr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ctm_detail_background"
        android:paddingStart="15dp"
        android:paddingTop="20dp"
        android:paddingEnd="15dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>